# pyDOTtest

./: .pre-commit-config.yaml  README.rst  setup.cfg
