[metadata]
name = pyDOTtest
version = 1.0.0
description = pyDOTtest: simple powerful testing with Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/asottile/pyDOTtest
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
install_requires = pytest>=3
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    pyDOTtest = pytest:main

[bdist_wheel]
universal = True
